# taskmaster

./: .gitignore  CMakeLists.txt  README.md  project.json
config_exemple/: TaskManager.cfg.json  TaskManager.cfg.yaml
incs/: Commands.hpp  taskmanager.hpp
incs/class/: Config.hpp  Controler.hpp  Service.hpp
src/: load.c3  main.c3  type.c3
src_cli/: main.c3
src_common/: common.c3  option.c3  sockets.c3
src_daemon/: daemon.c3  load.c3  main.c3  parsing.c3  type.c3
src_daemon/command/: cmdType.c3  load.c3
srcs/: Commands.cpp  main.cpp
srcs/Commands/: help.cpp
srcs/class/: Config.cpp  Controler.cpp  Service.cpp
test_config/: TaskManager.cfg.yaml
